terraform/elastic_ip.tf
resource "aws_eip" "ip_pub" {
    domain = "vpc"
    tags = {
        Name = "meu-ip-publico"
    }
}

resource "aws_eip_association" "assoc_ip" {
    instance_id = aws_intance.zabbix_server.id 
    allocation_id = aws_eip.ip_pub.id
}
